# shibuya

./: .gitattributes  .gitignore  GETTING_STARTED.md  README.md  nx.json  ops  orchestrator.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  port.config.js  requirements.workspaces.yaml  requirements.yaml  shibuya.js  shibuya.workspaces.yaml  thoughts.md  version
.githooks/: post-merge  pre-commit  pre-push
apps/rust-api/: .env.local  .gitignore  Cargo.toml  README.md  project.json  shibuya.yaml
apps/rust-api/migrations/: 202601270000_create_items.sql  20260127062510_create_items_table.sql  20260127062510_create_people_table.sql
apps/rust-api/seeds/: persons.dev.json
apps/rust-api/src/: auth.rs  db.rs  error.rs  main.rs
apps/rust-api/src/handlers/: email_handler.rs  item_handler.rs  mod.rs  person_handler.rs  status_handler.rs
apps/rust-api/src/middleware/: auth_layer.rs
apps/rust-api/src/models/: item.rs  mod.rs  person.rs
apps/rust-api/src/routes/: item_routes.rs  mod.rs  people_routes.rs
apps/rust-api/tests/: api.http
helper/: clean-all.mjs  clean_all.sh  export-keycloak-realm.mjs  first_install.sh  mokuroku.mjs  port.config.js  sensei.mjs  shibuya-check.mjs
mokuroku/: 01-INDEX.md  02-CONTRIBUTORS.md  03-BUGTRACKING.md  04-SUIDO.md  05-SHIBUYA-DISTRICT.md  05-the-village.md  BUGTRACKING.md  CONTRIBUTORS.md  INDEX.md  SUIDO.md  notes.vault  provisional.md  thoughts.md  why.md
shibuya/: bug-add.mjs  bug-link.mjs  clean-all.mjs  export-keycloak-realm.mjs  mokuroku-backlog-controller.mjs  mokuroku-viewer.mjs  mokuroku.mjs  sensei.mjs  (+2 more)
(+96 files in other folders)
