[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.11", features = ["json"] }

# Datenbank & SQL (Postgres)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialisierung & Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = "0.11.19"
